Fix Sitemap spacing from top

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -754,7 +754,6 @@ div.repolist ul li p {
 }
 
 #sitemap h1 {
-  margin-top: 0;
   color: var(--text-color);
 }
 
